--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,20 +1,22 @@
 div {
     border-radius: 5px;
-}
+	}
 #header{
     position: fixed;
     z-index: 1;
     height: 60px;
     width: 99%;
-    background-color:#668888 
+    background-color:#668888;
+	transition: background-color 0.5s ease;
+	display:inline;
 }
 .right{
     float: right;
     width: 89%;
 	height: 750px;
 	background-color: #DCDCDC;
-    margin-top: 60px
-}
+    margin-top: 60px;
+	}
 #footer {
 	position: relative;
 	height: 50px;
@@ -24,12 +26,12 @@ div {
 	font-size: 14px;
 	text-align: center;
 	color: #ffffff;
-}
+	}
 
 #footer p {
 	position: relative;
 	padding-top: 15px;
-}
+	}
 
 .left{
     float: left;
@@ -38,7 +40,7 @@ div {
 	background-color: #B9D7D9;
 	margin-top: 60px;
 	margin: 60px, 0px, 10px, 0px;
-}
+	}
 #name {
 	float:left;
 	margin-left: 5px;
@@ -46,7 +48,7 @@ div {
 	font-size: 16px;
 	font-family: Verdana, sans-serif;
 	color: #ffffff;
-}
+	}
 #email{
 	float:right;
 	margin-right: 5px;
@@ -54,23 +56,26 @@ div {
 	font-size: 16px;
 	font-family: Verdana, sans-serif;
 	color: #ffffff;
-}
+	}
 h4 {
 	margin-left: 5px;
 	margin-bottom: 15px;
 	font-family: Verdana, sans-serif;
-}
+	}
 .right p {
 	margin-left: 5px;
 	margin-right: 5px;
 	margin-top: -10px;
 	font-family: Garamond, serif;
 	color: #000000;
-}
+	}
 li {
 	list-style-type: square;
-}	
+	}	
 
 a:hover {
 	font-weight: bold;
 }
+.active {
+    background-color:#123456;
+	}
